# causal-mediation

./: .gitignore  LICENSE  README.md  alloc.sh  benchmark.py  pyproject.toml
benchmarks/: METRICS.md  analyze_benchmark.ipynb  benchmark.py  benchmark.sbatch
data_gen/: data_gen_basic.py  data_gen_wn.py
