[project]
name = "causal-mediation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.35.3",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "typer>=0.19.2",
]
